--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,5 +23,5 @@
     {{ if .Params.math }}{{ partial "math.html" . }}{{ end }}
 
 
-    <title>{{ .Title }}</title>
+    <title>{{ .Title }} &ndash; DAB23</title>
 </head>
