--- a/layouts/abstracts/list.html
+++ b/layouts/abstracts/list.html
@@ -7,7 +7,7 @@
 
 		<h3>{{ .Key }}</h3>
 
-		<div id="posts">
+		<div id="programme posts">
 			{{ range .Pages }}
 				{{.Render "li"}}
 			{{ end }}
